# app/Http/Controllers/Controller.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers;
 use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
 use Illuminate\Foundation\Validation\ValidatesRequests;
 use Illuminate\Routing\Controller as BaseController;
+
 /**
  * @OA\Info(
  *      version="1.0.0",
@@ -18,10 +19,15 @@ use Illuminate\Routing\Controller as BaseController;
  *         url="https://www.apache.org/licenses/LICENSE-2.0.html"
  *     )
  * )
+ * @OA\SecurityScheme(
+ *   type="http",
+ *   securityScheme="bearerAuth",
+ *   scheme="bearer",
+ *   bearerFormat="JWT"
+ * )
  *
  */
 class Controller extends BaseController
 {
-
     use AuthorizesRequests, ValidatesRequests;
 }
