# app/Models/Product.php
@@ -5,20 +5,21 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class Category extends Model
+class Product extends Model
 {
     use HasFactory;
     protected $fillable = [
+        'category_id',
         'name',
-        'photo',
+        'price',
         'description',
 
     ];
     /**
-     * Get the products that owns the category.
+     * Get the category that owns the product.
      */
-    public function products()
+    public function category()
     {
-        return $this->hasMany(Product::class);
+        return $this->belongsTo(Category::class);
     }
 }
